declare_args(){
    v8_enable_tests = true
    v8_compress_pointers = true
}
is_component_build = false
is_debug = true
target_cpu = "x64"
v8_enable_sandbox = true
v8_enable_backtrace = true
v8_enable_disassembler = true
v8_enable_object_print = true
v8_enable_verify_heap = true
dcheck_always_on = false
strip_debug_info = false
symbol_level = 0
use_custom_libcxx = false
v8_monolithic = true
v8_enable_i18n_support = false
v8_use_external_startup_data = false
treat_warnings_as_errors = false
clang_use_chrome_plugins = false
enable_iterator_debugging = true