declare_args(){
    v8_enable_tests = false
    v8_compress_pointers = true
}
is_component_build = false
is_debug = false
target_cpu = "x64"
v8_enable_sandbox = true
v8_enable_backtrace = true
v8_enable_disassembler = false
v8_enable_object_print = true
v8_enable_verify_heap = true
dcheck_always_on = false
strip_debug_info = true
symbol_level = 0
use_custom_libcxx = false
v8_monolithic = true
v8_enable_i18n_support = false
v8_use_external_startup_data = false
treat_warnings_as_errors = false
clang_use_chrome_plugins = false